--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,15 @@ body {
       flex-grow: 1;
 }
 
+.overlay {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      top: 0;
+      left: 0;
+}
+
 /* MAIN  */
 main {
       width: 100%;
@@ -55,11 +64,12 @@ aside {
 }
 
 .boxsopra {
-      overflow: auto;
+      overflow-y: auto;
+      overflow-x: hidden;
 }
 
 .boxsotto {
-      height: 100px;
+      min-height: 50px;
       position: sticky;
       bottom: 0;
       z-index: 30;
@@ -69,6 +79,7 @@ aside {
 #catalog {
       width: 85%;
       overflow: auto;
+      position: relative;
 }
 
 #catalog header {
