--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ body {
       left: 0;
 }
 
+ul li {
+      list-style: none;
+}
+
 /* MAIN  */
 main {
       /* width: 100%; */
@@ -63,33 +67,62 @@ main {
 
 /* ASIDE */
 aside {
-      width: 280px;
-      /* max-height: calc(100vh - 100px); */
+      width: 250px;
+      max-height: calc(100vh - 100px);
       min-height: 300px;
 }
 
-.boxsopra {
+.logo {
+      width: 170px;
+      padding: 15px;
+}
+
+.mini-logo {
+      width: 40px;
+      display: none;
+}
+
+aside li {
+      padding: 0 10px;
+}
+
+aside li img {
+      width: 28px;
+      margin: 3px;
+}
+
+aside li span {
+      color: var(--color-grey);
+      font-size: 0.8rem;
+      font-weight: bold;
+}
+
+.playlist {
       overflow-y: auto;
       overflow-x: hidden;
+      font-size: 0.8rem;
+      color: var(--color-grey);
+      font-weight: bold;
+}
+
+.playlist li {
+      padding: 8px 15px;
 }
 
 .boxsotto {
       min-height: 50px;
-      /* position: sticky;
-      bottom: 0;
-      z-index: 30; */
 }
 
 /* CATALOG */
 #catalog {
-      width: calc(100% - 280px);
+      width: calc(100% - 250px);
       overflow: auto;
       position: relative;
 }
 
-#catalog header {
+#catalog .cta {
       height: 100px;
-      width: calc(100% - 280px);
+      width: calc(100% - 250px);
       position: fixed;
       top: 0;
       right: 0;
@@ -111,14 +144,13 @@ footer {
 }
 
 .side-left {
-      max-width: 300px;
+      width: 260px;
 }
 
 .side-right {
-      width: 300px;
+      width: 260px;
+      justify-content: flex-end;
 }
-
-/* .side-right .icons {} */
 
 .side img {
       width: 50px;
@@ -203,7 +235,7 @@ footer {
 }
 
 .side-right .progress-bar.empty {
-      width: 180px;
+      width: 150px;
 }
 
 .progress-bar.step { 
