--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ main {
 
 /* ASIDE */
 aside {
-      width: 250px;
+      width: 220px;
       height: calc(100vh - 90px);
       background-color: var(--background-black);
       overflow: hidden;
@@ -138,19 +138,18 @@ aside nav ul li a span {
 }
 
 .playlist {
-      /* height: 100px; */
       font-size: 0.7rem;
-      color: var(--color-grey);
       overflow: auto;
       height: 100%;
 }
 
-.playlist ul {
-      
-}
-
 .playlist li {
       padding: 7px 15px;
+}
+
+.playlist li a {
+      text-decoration: none;
+      color: var(--color-grey);
 }
 
 .profile {
@@ -193,7 +192,7 @@ aside nav ul li a span {
 /* CATALOG */
 #catalog {
       height: calc(100vh - 90px);
-      width: calc(100% - 250px);
+      width: calc(100% - 220px);
       overflow: auto;
       position: relative;
       background-color: var(--background-darkblue);
@@ -201,7 +200,7 @@ aside nav ul li a span {
 
 #catalog .cta {
       height: 80px;
-      width: calc(100% - 250px);
+      width: calc(100% - 220px);
       position: fixed;
       top: 0;
       right: 0;
@@ -228,7 +227,16 @@ aside nav ul li a span {
       display: inline-block;
       font-size: 0.8rem;
       padding: 10px 10px 0;
+}
+
+#catalog nav ul li a {
+      text-decoration: none;
       color: var(--color-grey);
+      cursor: pointer;
+}
+
+#catalog nav ul li a:hover {
+      color: var(--color-white);
 }
 
 .row {
@@ -260,6 +268,10 @@ aside nav ul li a span {
       width: calc((100% / 6) - 10px);
       margin-right: 10px;
       text-align: center;
+}
+
+.card:hover {
+      cursor: pointer;
 }
 
 .img-box {
@@ -303,11 +315,11 @@ footer {
 }
 
 .side-left {
-      width: 260px;
+      width: 230px;
 }
 
 .side-right {
-      width: 260px;
+      width: 230px;
       justify-content: flex-end;
 }
 
@@ -323,8 +335,8 @@ footer {
 .side .icons button,
 .center .player button {
       border: none;
-      font-size: 1rem;
       cursor: pointer;
+      font-size: 1rem;
       background-color: #282828;
 }
 
@@ -353,7 +365,6 @@ footer {
 
 .center {
       width: 40%;
-      height: 100%;
 }
 
 .center .player button {
@@ -392,7 +403,7 @@ footer {
 }
 
 .side-right .progress-bar.empty {
-      width: 150px;
+      width: 120px;
 }
 
 .progress-bar.step { 
@@ -431,15 +442,31 @@ footer {
 /* FROM DESKTOP TO 1100 */
 @media screen and (max-width: 1100px) {
       
+      #catalog .card {
+            width: calc((100% / 4) - 10px); 
+            margin-bottom: 15px;    
+      }
 }
 
 /* FROM 1100 TO 700 */
 @media screen and (max-width: 700px) {
 
+      #catalog .card {
+            width: calc((100% / 2) - 10px);
+            margin-bottom: 15px;
+      }
 }
 
 /* FROM 700 TO 600 */
 @media screen and (max-width: 600px) {
+
+      #catalog {
+            width:calc(100% - 40px);     
+      }
+
+      #catalog .cta {
+            width: calc(100% - 40px);
+      }
 
       aside {
             width: 40px;
