--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -342,6 +342,12 @@ aside nav ul .special-li:hover a img {
 
 .card:hover {
       cursor: pointer;
+      transform: scale(1.15);
+      z-index: 2;
+}
+
+.card:active {
+      transform: scale(0.95);
 }
 
 .img-box {
@@ -497,11 +503,20 @@ footer {
 }
 
 .center .progress-bar.step {
-      width: 25%;
+      width: 30%;
 }
 
 .side-right .progress-bar.step {
       width: 30%;
+}
+
+.progress-bar.step:hover {
+      animation: progbar 3s linear;
+}
+@keyframes progbar {
+      100% {
+            width: 100%;
+      }
 }
 
 .circle-bar {
